Theorie und Durchführung fertig

--- a/07-01.Dezember/content/auswertung.tex
+++ b/07-01.Dezember/content/auswertung.tex
@@ -12,7 +12,7 @@ Ziel des Teilversuchs ist es die Abhängigkeit der Ausgangsspannung $U_{\text{ou
 \end{figure}
 Daran wird die Phasenskala für den weiteren Versuchsverlauf ausgerichtet. Mittels eines Tiefpasses wird die Spannung, durch den Innenwiederstand integriert und die Zeitlich gemittelte Spannung auf einem Messgerät ausgegeben. Nach Berücksichtigung der Verstärkung ergibt sich nach Formel \ref{eqn:Uout} für eine Phasenverschiebung von $\phi = 0^{\circ}$ eine Spannung von
 \begin{equation}
-  U_{\text{out}} = \frac{2}{\pi} \cdot \frac{52 \cdot 10^{-3} \, V}{200} = 33.1 \cdot 10^{-3} \, V
+  U_{\text{out}} = \frac{2}{\pi} \cdot \frac{52 \cdot 10^{-3} \, V}{200} = 1.66 \cdot 10^{-4} \, V
   \label{eqn:Uout}
 \end{equation}
 Nach Formel ?? werden die theoretischen und praktischen Spannungswerte ausgerechnet und in Tabelle \ref{tab:Uphase} mit dem dazugehörigen Phasenwinkel aufgelistet.
@@ -128,7 +128,7 @@ Die gemessenen Spannungen, deren Verstärkung und der Abstand $r$ sind in Tabell
   \centering
   \begin{tabular}{c c}
     \toprule
-    $r$ / m & $U_\text(sig)$ / $10^{-4}$ \cdot V \\
+    $r$ / m & $U_\text{sig}$ / $10^{-4}$ \cdot V \\
     \midrule
     0.2  & 60.76	\\
     0.25 & 49.75	\\
