--- a/07-01.Dezember/content/theorie.tex
+++ b/07-01.Dezember/content/theorie.tex
@@ -19,7 +19,7 @@ In Abblidung \ref{img:SV} wird eine sinusförmige Signalspannung
 \begin{align}
 	U_\text{sig} = U_\text{0} \sin(\omega t) \ ,
 \end{align}
-betrachtet, die durch $U_\text{ref}$ moduliert wird. $U_\text{ref}$ hat dabei eine auf 1 normierte Amplitude, die bei einer positiven Signalspannung auf 1 steht und bei einer negativen Signalspannung auf -1 steht. Dadurch wird das Nutzsignal von einer Wechselspannung zu einer Gleichspannung geändert, um bei der Integration ein Ergebniss ungleich 0 zu erhalten. %ist der letzte satz notwendig?
+betrachtet, die durch $U_\text{ref}$ moduliert wird. $U_\text{ref}$ hat dabei eine auf 1 normierte Amplitude, die bei einer positiven Signalspannung auf 1 steht und bei einer negativen Signalspannung auf -1 steht. Dadurch wird das Nutzsignal von einer Wechselspannung zu einer Gleichspannung geändert, um bei der Integration ein Ergebniss ungleich 0 zu erhalten.
 Die Rechteckspannung $U_\text{ref}$ wird mit einer Fourrierreihe genähert, die sich aus den ungeraden Harmonischen der Grundfrequnz $\omega$ zusammensetzt und die Form
 \begin{equation}
 	U_\text{ref} = \frac{4}{\pi} \left( \sin(\omega t) + \frac{1}{3} \sin(3 \omega t) + \frac{1}{5} \sin(5 \omega t) + ... \right)
