Nur noch Fehlerrechung und Diskussion

--- a/06-24.November/content/theorie.tex
+++ b/06-24.November/content/theorie.tex
@@ -1,13 +1,13 @@
 \section{Theoretische Grundlage}
 \label{sec:Theorie}
-Das Stefan-Boltzmann Gesetz verknüpft die abgestrahlte Leistung eines schwarzen Körpers mit seiner Temperatur. Im Idealfall ist das Emissionsvermögen $\varepsilon(\lambda, T)$ genauso groß wie dessen Absorptionsvermögen $A(\lambda, T)$. Dabei Reflektiert $R(\lambda,T)$ der Körper die Aufgenommene Energie in Form von Wellen und ändert seine Temperatur.
+Das Stefan-Boltzmann Gesetz verknüpft die abgestrahlte Leistung eines schwarzen Körpers mit seiner Temperatur. Im Idealfall ist das Emissionsvermögen $\varepsilon(\lambda, T)$ genauso groß wie dessen Absorptionsvermögen $A(\lambda, T)$. Dabei ist $R(\lambda,T)$ das Reflektionsvermögen der Körper.
 \begin{equation}
   \varepsilon(\lambda, T) = A(\lambda, T) = 1-R(\lambda, T)
   \label{eqn:emission}
 \end{equation}
 Die Leistung die ein Körper abstrahlt, hängt von der Temperatur, der Wellenlänge und dem Raumwinkel $\Omega_0$ ab und wird als
 \begin{equation}
-  P(\lambda, T) = \frac{dP}{d \lambda} = \frac{2 \pi c^2 h}{\Omega_o \lambda^5}\left( exp\left( \frac{c h}{k \lambda T} \right) -1 \right)^{-1}
+  P(\lambda, T) = \frac{dP}{d \lambda} = \frac{2 \pi c^2 h}{\Omega_o \lambda^5}\left( \exp \left( \frac{c h}{k \lambda T} \right) -1 \right)^{-1}
   \label{eqn:planck}
 \end{equation}
 Planck'sches Strahlungsgesetz bezeichnet.
@@ -18,7 +18,7 @@ Das Stefan-Boltzmann Gesetz beschreibt die Strahlungsdichte $P(T)$ bezogen auf d
 \end{equation}
 wobei $\sigma$ die Stefan-Boltzmann Konstante ist und
 \begin{equation}
-  \sigma = 5.67 \cdot 10^{-8} \, \frac{\text{W}}{\text{m$^2$K$^4$}}
+  \sigma = 5.67 \cdot 10^{-8} \, \frac{\text{W}}{\text{m$^2$K$^4$}} \, \text{\cite{sample}}
 \end{equation}
 beträgt.
 \subsection{Fehlerrechnung}
