--- a/06-24.November/lit.bib
+++ b/06-24.November/lit.bib
@@ -1,5 +1,5 @@
 @manual{sample,
   author = {TU Dortmund},
-  title = {Versuch zum Literaturverzeichnis},
+  title = {Versuch 207: Das Stefan-Boltzmann-Gesetz},
   year = 2014
 }
