--- a/06-24.November/content/auswertung.tex
+++ b/06-24.November/content/auswertung.tex
@@ -2,7 +2,7 @@
 \label{sec:Auswertung}
 
 \subsection{Bestimmung des Emissionsvermögens}
-Das Emissionsvermögen der einzelnen Oberflächen wird bestimmt, in dem die Thermospannnung als Funktion von $T^4 - T_0^4$ aufgetragen wird. Aus der Steigung der Ausgleichsgeraden lässt sich dann $\epsilon$ bestimmen. \\
+Das Emissionsvermögen der einzelnen Oberflächen wird bestimmt, in dem die Thermospannung als Funktion von $T^4 - T_0^4$ aufgetragen wird. Aus der Steigung der Ausgleichsgeraden lässt sich dann $\epsilon$ bestimmen. \\
 Die gemessene Raumtemperatur beträgt
 \begin{align*}
   T_0 = 294.26 \, \text{K} \ .
@@ -13,7 +13,7 @@ Die Thermospannungen bei den Temperaturen sind in Tabelle \ref{tab:Daten} aufgef
   \begin{tabular}{c c c c c}
     \toprule
     	& \multicolumn{1}{c}{weiß} & \multicolumn{1}{c}{messingfarben} &	\multicolumn{1}{c}{schwarz} & \multicolumn{1}{c}{glänzend} \\
-    $T$ / K & $U_\text{1}$ / mV & $U_\text{2}$ / mV & $U_\text{3}$ / V & $U_\text{4}$ / mV \\
+    $T$ / K & $U_\text{1}$ / mV & $U_\text{2}$ / mV & $U_\text{3}$ / mV & $U_\text{4}$ / mV \\
     \midrule
       368.15	&  1.09	&  0.20	 & 1.13  & 0.084 \\
       363.15	&  1.04	&  0.17	 & 1.05  & 0.068 \\
@@ -77,49 +77,54 @@ Mit den Tabellen \ref{tab:Daten} und \ref{tab:Offset}, sowie $T_0$ ergeben sich 
   \caption{Ausgleichsgerade der Messwerte für die glänzende Oberfläche}
   \label{fig:ThermoG}
 \end{figure}
-Die Steigung der Ausgleichsgeraden wird mit der linearer Regression ermittelt und ist im folgenden aufgelistet.
+Die Steigung und der Fehler der Ausgleichsgeraden werden mit der linearer Regression durch Python 3.4.3 ermittelt und ist im folgenden aufgelistet.
 \begin{align*}
-  m_\text{weiß}     &= 10.63 \cdot 10^{-14}  \\
-  m_\text{messing}  &= 1.82  \cdot 10^{-14}  \\
-  m_\text{schwarz}  &= 10.87 \cdot 10^{-14}  \\
-  m_\text{glänzend} &= 0.66  \cdot 10^{-14}  \\
+  m_\text{weiß}     &= (\num{10.6 +- 0.1})   \cdot 10^{-14} \, \text{V/K}^4 \\
+  m_\text{messing}  &= (\num{1.82 +- 0.04})  \cdot 10^{-14} \, \text{V/K}^4 \\
+  m_\text{schwarz}  &= (\num{10.87 +- 0.07}) \cdot 10^{-14} \, \text{V/K}^4 \\
+  m_\text{glänzend} &= (\num{0.66 +- 0.05})  \cdot 10^{-14} \, \text{V/K}^4 \\
 \end{align*}
-Mit der Annahme, dass die schwarze Oberfläche ein Schwarzer Körper ist($\epsilon_\text{schwarz} = 1$), folgt für die anderen Oberflächen ein Emissionsvermögen von:
+Mit der Annahme, dass die schwarze Oberfläche ein Schwarzer Körper ist($\epsilon_\text{schwarz} = 1$), folgt mit der Gleichung \ref{eqn:epsilon}, für die anderen Oberflächen ein Emissionsvermögen von:
+\begin{equation}
+  \epsilon_\text{i} = \frac{m_\text{i}}{m_\text{schwarz}}
+  \label{eqn:epsilon}
+\end{equation}
 \begin{align*}
   \epsilon_\text{schwarz}  \, &= 1     \\
-  \epsilon_\text{weiß}     \, &= 0.978 \\
-  \epsilon_\text{messing}  \, &= 0.167 \\
-  \epsilon_\text{glänzend} \, &= 0.061 \\
+  \epsilon_\text{weiß}     \, &= (\num{0.98 +- 0.01}) \\
+  \epsilon_\text{messing}  \, &= (\num{0.167 +- 0.004}) \\
+  \epsilon_\text{glänzend} \, &= (\num{0.061 +- 0.004}) \\
 \end{align*}
 
 \newpage
 \subsection{Thermospannunng im Verhältniss zum Abstand}
-Die Thermospannung der weißen Oberfläche gegen den Abstand aufgetragen ergibt Abbildung \ref{fig:Abstand}. Die dazu gehörigen Messwerte sind in Tabelle \ref{tab:Abstand} aufgelistet.
+Die Thermospannung der weißen Oberfläche gegen $\frac{1}{A^2}$ aufgetragen ergibt Abbildung \ref{fig:Abstand}. Die dazu gehörigen Messwerte sind in Tabelle \ref{tab:Abstand} aufgelistet.
 \begin{table}[H]
   \centering
-  \begin{tabular}{c c}
-      A / cm & U / mV \\
+  \begin{tabular}{c c c}
+      A / m & $\frac{1}{A^2}$ / $\frac{1}{\text{m}^2}$ & $U_\text{weiß}$ / mV \\
     \midrule
-      10.0  &  0.247 \\
-      12.5	&  0.238 \\
-      15.0	&  0.228 \\
-      17.5	&  0.217 \\
-      20.0	&  0.202 \\
-      22.5	&  0.189 \\
-      25.0	&  0.177 \\
-      27.5	&  0.162 \\
-      30.0	&  0.149 \\
-      32.5	&  0.137 \\
-      35.0	&  0.128 \\
+      0.100  & 100.0 & 0.247 \\
+      0.125	& 64.0   & 0.238 \\
+      0.150	& 44.4   & 0.228 \\
+      0.175	& 32.7   & 0.217 \\
+      0.200	& 25.0   & 0.202 \\
+      0.225	& 19.8   & 0.189 \\
+      0.250	& 16.0   & 0.177 \\
+      0.275	& 13.2   & 0.162 \\
+      0.300	& 11.1   & 0.149 \\
+      0.325	& 9.5    & 0.137 \\
+      0.350	& 8.2    & 0.128 \\
   \end{tabular}
-  \caption{Messergebnisse für das Verhältnis zwischen Thermospannung und dem Abstand}
+  \caption{Messergebnisse für das Verhältnis zwischen Thermospannung und $\frac{1}{A^2}$}
   \label{tab:Abstand}
 \end{table}
 
 \begin{figure}
   \centering
   \includegraphics[width=\textwidth]{ThermoAbstand.pdf}
-  \caption{Abstand}
+  \caption{Graph für das Verhältnis zwischen Thermospannung und $\frac{1}{A^2}$}
   \label{fig:Abstand}
 \end{figure}
+
 \newpage
