--- a/06-24.November/content/durchfuehrung.tex
+++ b/06-24.November/content/durchfuehrung.tex
@@ -1,6 +1,8 @@
 \section{Durchführung und Aufbau}
 \label{sec:Durchführung}
-Im vorliegenden Versuch soll die Strahlungsleistung eines schwarzen Körpers als Funktion der Temperatur bestimmt werden. Als ein schwarzer Körper wird ein Objekt bezeichnet, welches die gesamte einfallende Strahlung absorbiert ($\varepsilon = 1$). Da der Körper sich im thermischen Gelichgewicht befindet, ändert er somit entweder seine Temperatur oder emitiert jegliche Strahlung wieder. Ein schwarzer Strahler ist jedoch nur ein idealisiertes Modell. Dem Modell am nächsten kommt ein Hohlkörper wie zum Beispiel ein Leslie-Würfel. Zur Eichung der Thermosäule nach Moll wird einmal am Anfang und am Ende der Messreihe die Offsetspannung gemessen um Temperaturdrifts in der Rechnung vernachlässigen zu können.
+Im vorliegenden Versuch soll die Strahlungsleistung eines schwarzen Körpers als Funktion der Temperatur bestimmt werden. Als ein schwarzer Körper wird ein Objekt bezeichnet, welches die gesamte einfallende Strahlung absorbiert ($\varepsilon = 1$). Da der Körper sich im thermischen Gleichgewicht befindet, ändert er somit entweder seine Temperatur oder emittiert jegliche Strahlung wieder. Ein schwarzer Strahler ist jedoch nur ein idealisiertes Modell. Dem Modell am nächsten kommt ein Hohlkörper wie zum Beispiel ein Leslie-Würfel. Zur Eichung der Thermosäule nach Moll wird einmal am Anfang und am Ende der Messreihe die Offsetspannung gemessen um Temperaturdrifts in der Rechnung vernachlässigen zu können.
+\subsection{Funktionsweise der Thermosäule nach Moll}
+Die Thermosäule nach Moll dient zur Messung von Wärmestrahlung und besteht aus mehreren in Reihe geschalteten Thermoelementen. Bei Bestrahlung entsteht eine thermoelektrische Spannung, die mit einer spannungsempfindlichen Meßapparatur gemessen wird. Die Thermospannung des Körpers wird relativ zur Gehäusetemperatur der Thermosäule angegeben.
 \subsection{Strahlungsleistung als Funktion der Temperatur}
 Zuerst soll die Strahlungsleistung eines Leslie-Würfels welcher mit kochendem Wasser befüllt wird gemessen werden. Der Würfel hat 4 verschiedene Oberflächen von welchen das Absorbtionsvermögen bestimmt werden soll. Dafür wird die Temperatur des Wassers innerhalb des Würfels mit einem Thermometer gemessen. Die Wärmestrahlung wird mittels einer Thermosäule nach Moll gemessen und in Abhängigkeit der Temperatur nortiert. Es werden bei der Abkühlung des Wassers um $5^\circ$ C jeweils ein Wertepaar für jede Seite des Würfels genommen bis sich das Wasser auf $35^\circ$ C abgekühlt hat.
 \subsection{Strahlungsleistung als Funktion des Abstandes}
