--- a/06-24.November/content/theorie.tex
+++ b/06-24.November/content/theorie.tex
@@ -11,12 +11,12 @@ Die Leistung die ein Körper abstrahlt, hängt von der Temperatur, der Wellenlä
   \label{eqn:planck}
 \end{equation}
 Planck'sches Strahlungsgesetz bezeichnet.
-Das Stefan-Boltzmann Gesetz beschreibt die Strahlungsdichte $P(T)$ bezogen auf die abgestalte Fläche und lautet
+Das Stefan-Boltzmann Gesetz beschreibt die Strahlungsdichte $P(T)$ bezogen auf die abgestrahlte Fläche und lautet
 \begin{equation}
   P(T) = \varepsilon \sigma T^4 \ ,
   \label{eqn:strahlungsgesetz}
 \end{equation}
-wobei $\sigma$ die Stefan-Boltzmann Konstante ist und
+wobei $\sigma$ die Stefan-Boltzmann-Konstante ist und
 \begin{equation}
   \sigma = 5.67 \cdot 10^{-8} \, \frac{\text{W}}{\text{m$^2$K$^4$}} \, \text{\cite{sample}}
 \end{equation}
