Fertig und ausgedruckt

--- a/06-24.November/content/diskussion.tex
+++ b/06-24.November/content/diskussion.tex
@@ -4,3 +4,4 @@ Die Standardabweichung der Steigung und der daraus resultierende Fehler für $\e
 \\
 Ein Vergleich mit Literaturwerten ist hier nicht Sinnvoll da wir von der idealisierten Annahme ausgehen, dass die schwarze Oberfläche ein Emissionsvermögen von $\epsilon = 1$ besitzt und alle anderen Werte von diesem abgeleitet werden.
 \\
+In den Versuchen wird das Stefan-Boltzmann-Gesetz tendenziell bewiesen.
