--- a/06-24.November/content/auswertung.tex
+++ b/06-24.November/content/auswertung.tex
@@ -77,7 +77,7 @@ Mit den Tabellen \ref{tab:Daten} und \ref{tab:Offset}, sowie $T_0$ ergeben sich 
   \caption{Ausgleichsgerade der Messwerte für die glänzende Oberfläche}
   \label{fig:ThermoG}
 \end{figure}
-Die Steigung und der Fehler der Ausgleichsgeraden werden mit der linearer Regression durch Python 3.4.3 ermittelt und ist im folgenden aufgelistet.
+Die Steigung und der Fehler der Ausgleichsgeraden werden mit der linearen Regression durch Python 3.4.3 ermittelt und sind im folgenden aufgelistet.
 \begin{align*}
   m_\text{weiß}     &= (\num{10.6 +- 0.1})   \cdot 10^{-14} \, \text{V/K}^4 \\
   m_\text{messing}  &= (\num{1.82 +- 0.04})  \cdot 10^{-14} \, \text{V/K}^4 \\
@@ -90,13 +90,17 @@ Mit der Annahme, dass die schwarze Oberfläche ein Schwarzer Körper ist($\epsil
   \label{eqn:epsilon}
 \end{equation}
 \begin{align*}
-  \epsilon_\text{schwarz}  \, &= 1     \\
-  \epsilon_\text{weiß}     \, &= (\num{0.98 +- 0.01}) \\
+  \epsilon_\text{schwarz}  \, &= (\num{1.0 +- 0.0})     \\
+  \epsilon_\text{weiß}     \, &= (\num{0.98 +- 0.01})   \\
   \epsilon_\text{messing}  \, &= (\num{0.167 +- 0.004}) \\
   \epsilon_\text{glänzend} \, &= (\num{0.061 +- 0.004}) \\
 \end{align*}
+Die Fehlerformel von $\varepsilon_\text{i}$ folgt mit Formel \ref{eqn:var} zu:
+\begin{equation}
+  \Delta \varepsilon_\text{i} = \frac{\Delta m_\text{i}}{m_\text{schwarz}} \ .
+\end{equation}
 
-\subsection{Thermospannunng im Verhältniss zum Abstand}
+\subsection{Thermospannunng im Verhältnis zum Abstand}
 Die Thermospannung der weißen Oberfläche gegen $\frac{1}{A^2}$ aufgetragen ergibt Abbildung \ref{fig:Abstand}. Die dazu gehörigen Messwerte sind in Tabelle \ref{tab:Abstand} aufgelistet.
 \begin{table}[H]
   \centering
