--- a/06-24.November/content/durchfuehrung.tex
+++ b/06-24.November/content/durchfuehrung.tex
@@ -1,6 +1,6 @@
 \section{Durchführung und Aufbau}
 \label{sec:Durchführung}
-Im vorliegenden Versuch soll die Strahlungsleistung eines schwarzen Körpers als Funktion der Temperatur bestimmt werden. Als ein schwarzer Körper wird ein Objekt bezeichnet, welches die gesamte einfallende Strahlung absorbiert ($\varepsilon = 1$). Da der Körper sich im thermischen Gleichgewicht befindet, ändert er somit entweder seine Temperatur oder emittiert jegliche Strahlung wieder. Ein schwarzer Strahler ist jedoch nur ein idealisiertes Modell. Dem Modell am nächsten kommt ein Hohlkörper wie zum Beispiel ein Leslie-Würfel. Zur Eichung der Thermosäule nach Moll wird einmal am Anfang und am Ende der Messreihe die Offsetspannung gemessen um Temperaturdrifts in der Rechnung vernachlässigen zu können.
+Im vorliegenden Versuch soll die Strahlungsleistung eines schwarzen Körpers als Funktion der Temperatur bestimmt werden. Als ein schwarzer Körper wird ein Objekt bezeichnet, welches die gesamte einfallende Strahlung absorbiert ($\epsilon = 1$). Da der Körper sich im thermischen Gleichgewicht befindet, ändert er somit entweder seine Temperatur oder emittiert jegliche Strahlung wieder. Ein schwarzer Strahler ist jedoch nur ein idealisiertes Modell. Dem Modell am nächsten kommt ein Hohlkörper wie zum Beispiel ein Leslie-Würfel. Zur Eichung der Thermosäule nach Moll wird einmal am Anfang und am Ende der Messreihe die Offsetspannung gemessen um Temperaturdrifts in der Rechnung vernachlässigen zu können.
 \subsection{Funktionsweise der Thermosäule nach Moll}
 Die Thermosäule nach Moll dient zur Messung von Wärmestrahlung und besteht aus mehreren in Reihe geschalteten Thermoelementen. Bei Bestrahlung entsteht eine thermoelektrische Spannung, die mit einer spannungsempfindlichen Meßapparatur gemessen wird. Die Thermospannung des Körpers wird relativ zur Gehäusetemperatur der Thermosäule angegeben.
 \subsection{Strahlungsleistung als Funktion der Temperatur}
