--- a/06-24.November/content/theorie.tex
+++ b/06-24.November/content/theorie.tex
@@ -1,8 +1,8 @@
 \section{Theoretische Grundlage}
 \label{sec:Theorie}
-Das Stefan-Boltzmann Gesetz verknüpft die abgestrahlte Leistung eines schwarzen Körpers mit seiner Temperatur. Im Idealfall ist das Emissionsvermögen $\varepsilon(\lambda, T)$ genauso groß wie dessen Absorptionsvermögen $A(\lambda, T)$. Dabei ist $R(\lambda,T)$ das Reflektionsvermögen der Körper.
+Das Stefan-Boltzmann Gesetz verknüpft die abgestrahlte Leistung eines schwarzen Körpers mit seiner Temperatur. Im Idealfall ist das Emissionsvermögen $\epsilon(\lambda, T)$ genauso groß wie dessen Absorptionsvermögen $A(\lambda, T)$. Dabei ist $R(\lambda,T)$ das Reflektionsvermögen der Körper.
 \begin{equation}
-  \varepsilon(\lambda, T) = A(\lambda, T) = 1-R(\lambda, T)
+  \epsilon(\lambda, T) = A(\lambda, T) = 1-R(\lambda, T)
   \label{eqn:emission}
 \end{equation}
 Die Leistung die ein Körper abstrahlt, hängt von der Temperatur, der Wellenlänge und dem Raumwinkel $\Omega_0$ ab und wird als
@@ -13,7 +13,7 @@ Die Leistung die ein Körper abstrahlt, hängt von der Temperatur, der Wellenlä
 Planck'sches Strahlungsgesetz bezeichnet.
 Das Stefan-Boltzmann Gesetz beschreibt die Strahlungsdichte $P(T)$ bezogen auf die abgestrahlte Fläche und lautet
 \begin{equation}
-  P(T) = \varepsilon \sigma T^4 \ ,
+  P(T) = \epsilon \sigma T^4 \ ,
   \label{eqn:strahlungsgesetz}
 \end{equation}
 wobei $\sigma$ die Stefan-Boltzmann-Konstante ist und
