--- a/08-15.Dezember/content/auswertung.tex
+++ b/08-15.Dezember/content/auswertung.tex
@@ -151,10 +151,11 @@ $f_{0,\text{theo}}$ = (\num{382.1 +- 1.2}) Hz
   \label{tab:Brückenspannung}
 \end{table}
 
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=\textwidth]{AufgabeE.pdf}
-  \caption{Brückenschaltung}
-  \label{fig:AufgabeE}
-\end{figure}
+%\begin{figure}
+%  \centering
+  %die zeile funktioniert net
+%  \includegraphics[width=\textwidth]{AufgabeE.pdf}
+%  \caption{Brückenschaltung}
+%  \label{fig:AufgabeE}
+%\end{figure}
 Der experimentelle und der theoretische Wert liegen im Durchschnitt um 5,5\% auseinander.
