--- a/08-15.Dezember/content/durchfuehrung.tex
+++ b/08-15.Dezember/content/durchfuehrung.tex
@@ -2,21 +2,21 @@
 \label{sec:Durchführung}
 
 \subsection{Wheatstone Brücke}
-Zwei verschiedene Wiederstände sollen durch die Brückenschaltung vermessen werden. Dafür wird die Schaltung wie in Abbildung ?? aufgebaut. Anschließend wird das Potentiometer so lange varriert, bis die Brückenspannung minimal wird/verschwindet. Dies wird für drei verschieden Wiederstände $R_2$ wiederholt.
+Zwei verschiedene Wiederstände sollen durch die Brückenschaltung vermessen werden. Dafür wird die Schaltung wie in Abbildung \ref{fig:wiederstand} aufgebaut. Anschließend wird das Potentiometer so lange varriert, bis die Brückenspannung minimal wird/verschwindet. Dies wird für drei verschieden Wiederstände $R_2$ wiederholt.
 
 \subsection{Kapazitätsmessbrücke}
 \subsubsection{Idealer Kondensator}
-Es soll die Kapazität eines Kondensators ausgemessen werden. Dafür wird die Schaltung wie in Abbildung ?? Aufgebaut. Es kann jedoch der Wiederstand $R_2$ vernachlässigt werden, da die Innenwiderstände verschwinden gering sind. Daraufhin wird das Potnetiometer erneut so lange variiert, bis die Brückenspannung verschwindet. Dem Versuch werden die Werte  $C_2, R_3$ und $R_4$ entnommen um im weiteren Verlauf die Kapazität des Kondensators zu berechnen.
+Es soll die Kapazität eines Kondensators ausgemessen werden. Dafür wird die Schaltung wie in Abbildung \ref{fig:C} Aufgebaut. Es kann jedoch der Wiederstand $R_2$ vernachlässigt werden, da die Innenwiderstände verschwinden gering sind. Daraufhin wird das Potnetiometer erneut so lange variiert, bis die Brückenspannung verschwindet. Dem Versuch werden die Werte  $C_2, R_3$ und $R_4$ entnommen um im weiteren Verlauf die Kapazität des Kondensators zu berechnen.
 
 \subsubsection{Realer Kondensator}
 Ziel ist es eine RC-Kombination auszumessen. Dazu wird in die Schaltung der Abbildung entsprechend der Widerstand $R_2$ ergänzt. Die Messung wird mit 2 verschiedenen Kondensatoren $C_2$ wiederholt. Das Potentiometer wird erneut so eingestellt das die Brückenspannung minimal wird und die werte $C_2, R_2, R_3$, sowie  $R_4$ notiert.
 
 \subsection{Induktivitätsmessbrücke}
-Um die Induktivität und den fiktiven Wiederstand der Schaltung zu vermesen, wir die Schaltung wie in Abbildung ?? aufgebaut. Die Messung wird mit 2 versch
+Um die Induktivität und den fiktiven Wiederstand der Schaltung zu vermesen, wir die Schaltung wie in Abbildung \ref{fig:L} aufgebaut. Die Messung wird mit 2 versch
 iedenen Spulen $L_2$ wiederholt. Das Potentiometer wird erneut so eingestellt das die Brückenspannung minimal wird und die werte $L_2, R_2, R_3$, sowie
   $R_4$ notiert.
   
 \subsection{Maxwell Brücke}
-Die Schaltung ist wie in Abbildung ?? zu sehen ist aufgebaut. Dabei werden die Wiederstände $R_3$ sowie $R_4$ nicht mehr als Potentiometer, sondern jeweils als Regelbarer wiederstand benutzt. Bei der Brückenspannung wird durchabwechselndes justieen der beider Wiederstände das Minimum der Brückensapnnung gesucht. Die Werte $R-2, R_3, R_4$ und $C_4$ werde notiert un die messungg ein zweites mal für einen anderen Wiederstand $R_2$ durchgeführt.
+Die Schaltung ist wie in Abbildung \ref{fig:Max-Br} zu sehen ist aufgebaut. Dabei werden die Wiederstände $R_3$ sowie $R_4$ nicht mehr als Potentiometer, sondern jeweils als Regelbarer wiederstand benutzt. Bei der Brückenspannung wird durchabwechselndes justieen der beider Wiederstände das Minimum der Brückensapnnung gesucht. Die Werte $R-2, R_3, R_4$ und $C_4$ werde notiert un die messungg ein zweites mal für einen anderen Wiederstand $R_2$ durchgeführt.
 \subsection{TT-Brücke}
-Die Schaltung wird Abbildung ?? enstprechend aufgebaut. Zunächst wird die Speisespannung $U_\text{S}$ des Systems ermittelt. Es wird die Brückenspannung $U_\text{Br}$ im Bereich von (20-30000) Hz variiert. Dabei wird das Minimum der Brückensapnnung des Frequenzspektrums $f$ ermittelt und dem Aufbau Datentupel aus der Frequenz $f$ und der Brückenspannung genommen.
+Die Schaltung wird Abbildung \ref{fig:TT} enstprechend aufgebaut. Zunächst wird die Speisespannung $U_\text{S}$ des Systems ermittelt. Es wird die Brückenspannung $U_\text{Br}$ im Bereich von (20-30000) Hz variiert. Dabei wird das Minimum der Brückensapnnung des Frequenzspektrums $f$ ermittelt und dem Aufbau Datentupel aus der Frequenz $f$ und der Brückenspannung genommen.
