--- a/08-15.Dezember/content/auswertung.tex
+++ b/08-15.Dezember/content/auswertung.tex
@@ -91,7 +91,7 @@ Mit Hilfe der Induktivitätsmessbrücke wird die Induktivität $L_{19}$ = Wert19
 \end{table}
 
 \subsection{Maxwell-Brücke}
-Mit Hilfe der Maxwell-Brücke soll die gleiche Spule untersucht werden welche auch für die Induktivitätsmessbrücke verwendet wurde. Dadurch erhält man einen referenz Wert und kann die beiden Ergebnisse vergleichen. Die verwendete Kapazität $C_4$ = 750 nF bleibt für die gesamte Messung unverändert. Durch einsetzen in die Formeln ??, ?? erhält man $L_{19}$ und $R_{19}$. Die Messwerte und Ergebnisse sind in Tabelle \ref{tab:Induk2} aufgelistet.
+Mit Hilfe der Maxwell-Brücke soll die gleiche Spule untersucht werden welche auch für die Induktivitätsmessbrücke verwendet wurde, dadurch erhält man einen vergleichbaren Wert. Die verwendete Kapazität $C_4$ = 750 nF bleibt für die gesamte Messung unverändert. Durch einsetzen in die Formeln ??, ?? erhält man $L_{19}$ und $R_{19}$. Die Messwerte und Ergebnisse sind in Tabelle \ref{tab:Induk2} aufgelistet.
 
 \begin{table}[H]
   \centering
@@ -147,8 +147,8 @@ $f_{0,\text{theo}}$ = (\num{382.1 +- 1.2}) Hz
       15000	&  3.92  \\
       30000	&  3.92  \\
   \end{tabular}
-  \caption{Brückenspannung gegen die Frequenz aufgetragen.}
-  \label{tab:Brückenspannung}
+  \caption{Messwerte der Brückenspannung und der Frequenz von der TT-Brückenschaltung.}
+  \label{tab:TT-Brücke}
 \end{table}
 
 %\begin{figure}
