--- a/08-15.Dezember/content/theorie.tex
+++ b/08-15.Dezember/content/theorie.tex
@@ -6,7 +6,7 @@ Jede Brückenschaltung wird prinzipiell von einer Speisepannung $U_\text{s}$ und
 \begin{figure}
 	\centering
 	\includegraphics[height=5cm]{picture/1.png}
-	\caption{wesentlicher Aufbau einer Brückenschaltung}
+	\caption{wesentlicher Aufbau einer Brückenschaltung \cite{sample}}
 	\label{fig:wheatstone}
 \end{figure}
 Die Brückenschaltung liegt dem Kirchhoffschen Regeln zu Grunde. Die erste der beiden Regeln besagt, das die Summe der eingehenden und ausgehende Ströme an eineme Knoten gleich Null ist.
@@ -36,7 +36,7 @@ Die Wheatsonte Brücke besteht ausschließlich aus Wiederständen. Sie ist dafü
 \begin{figure}
       \centering
       \includegraphics[height=5cm]{picture/2.png}
-      \caption{wesentlicher Aufbau einer Brückenschaltung}
+      \caption{wesentlicher Aufbau einer Brückenschaltung \cite{sample}}
       \label{fig:widerstand}
 \end{figure}
 Durch umstellen der Gleichung \ref{eqn:R} erhält man für die den gesuchten Wiederstand $R_\text{x}$ die Formel,
@@ -50,7 +50,7 @@ Mit dieser Messbrücke soll die Kapazität des Kondensators bestimmt werden. Die
 \begin{figure}
   \centering
   \includegraphics[height=5cm]{picture/3.png}
-  \caption{Messung der Kapazität eines realen Kondensators}
+  \caption{Messung der Kapazität eines realen Kondensators \cite{sample}}
   \label{fig:C}
 \end{figure}
 Mittels der Abgleichbedingung gibt sich analog zu Formel \ref{eqn:R_x} ein Widerstand von
@@ -69,7 +69,7 @@ Mittels der Messbrücke aus der Abbildung \ref{fig:L} soll die Induktivität ein
 \begin{figure}
   \centering
   \includegraphics[height=5cm]{picture/4.png}
-  \caption{Messung der Induktivität einer realen Spule}
+  \caption{Messung der Induktivität einer realen Spule \cite{sample}}
   \label{fig:L}
 \end{figure}
 Mittels der Abgleichbedingung gibt sich analog zu Formel \ref{eqn:R_x} ein Widerstand von
@@ -86,7 +86,7 @@ Es soll die Induktivität einer Spule mit Hilfe der Maxwell-Brücke bestimmt wer
 \begin{figure}
   \centering
   \includegraphics[height=5cm]{picture/5.png}
-  \caption{Messung der Induktivität durch eine Maxwell-Brücke}
+  \caption{Messung der Induktivität durch eine Maxwell-Brücke \cite{sample}}
   \label{fig:Max-Br}
 \end{figure}
 Mit Hilfe der Maschenregel ergeben sich die Gleichungen zu Bestimmung der Induktion
@@ -104,7 +104,7 @@ Mittels einer TT-Brücke soll die Funktion des elektrischen Filters genauer best
 \begin{figure}
   \centering
   \includegraphics[height=5cm]{picture/7.png}
-  \caption{Messung der Induktivität durch eine TT-Brücke}
+  \caption{Messung der Induktivität durch eine TT-Brücke \cite{sample}}
   \label{fig:TT}
 \end{figure}
 Das Spannungverhältniss $U_\text{Br}$ zu $U_\text{S}$ zu berechnen werden die Ströme an den Knoten 1, 2 und 3 betrachtet. Für den ersten Knoten ergibt sich nach der Kirchhoffschen Knotenregel
