--- a/08-15.Dezember/lit.bib
+++ b/08-15.Dezember/lit.bib
@@ -1,5 +1,5 @@
 @manual{sample,
   author = {TU Dortmund},
-  title = {Versuch zum Literaturverzeichnis},
+  title = {V302: Brückenschaltung},
   year = 2014
 }
