--- a/07-01.Dezember/content/durchfuehrung.tex
+++ b/07-01.Dezember/content/durchfuehrung.tex
@@ -21,7 +21,7 @@ Im folgenden werden die einzelnen Module kurz erklärt:
 \newpage
 
 \subsection{Schaltung für die Phasenabhängigkeit der Ausgangsspannung}
-Als erstes wird an dem rechten Ausgang des Funktionengenerators der Phasenverschieber angeschlossen, welcher mit dem unteren Eingang des Lock-In verbunden wird. Danach wir der linke Ausgang des Funktionengenerators mit dem Eingang des Rauschgenerators verbunden. Von dem Rauschgenerator wird nun eine Verbindung zum Vorverstärker hergestellt, der Vorverstärker wir nun mit dem Filter verbunden. Von dem Filter(Bandpass) soll eine Verbindung zum Lock-In-Verstärker hergestellt werden. Zu letzt wird von dem Ausgang des Lock-In-Verstärkers zu dem Eingang des Tiefpassfilters und dem Channel 1 des Oszilloskops eine Verbindung hergestellt. Der Aufbau wird schematisch in Abbildung \ref{img:V1} dargestellt.
+Als Erstes wird an dem rechten Ausgang des Funktionengenerators der Phasenverschieber angeschlossen, welcher mit dem unteren Eingang des Lock-In verbunden wird. Danach wir der linke Ausgang des Funktionengenerators mit dem Eingang des Rauschgenerators verbunden. Von dem Rauschgenerator wird nun eine Verbindung zum Vorverstärker hergestellt, der Vorverstärker wir nun mit dem Filter verbunden. Von dem Filter(Bandpass) soll eine Verbindung zum Lock-In-Verstärker hergestellt werden. Zuletzt wird von dem Ausgang des Lock-In-Verstärkers zu dem Eingang des Tiefpassfilters und dem Channel 1 des Oszilloskops eine Verbindung hergestellt. Der Aufbau wird schematisch in Abbildung \ref{img:V1} dargestellt.
 \begin{figure}[H]
 	\centering
 	\includegraphics[height=4.2cm]{picture/Aufbau-Versuch1.png}
@@ -30,7 +30,7 @@ Als erstes wird an dem rechten Ausgang des Funktionengenerators der Phasenversch
 \end{figure}
 
 \subsection{Photodetektorschaltung}
-Für die Photodetektorschaltung wird der Rauschgenerator aus der Schaltung entfernt und durch eine LED mit Photodetektor ersetzt. Die LED wird an den linken Ausgang des Funktionengenerators angeschlossen und der Photodetektor wird mit dem Vorverstärker verbunden. Die LED und der Photodetektor stehen sich auf einem Stab gegenüber. Der Abstand zwischen den beiden Bauteilen kann variiert werden und wird mit einer auf dem Stab angebrachten Millimeter Skala gemessen. Der Aufbau wird schematisch in Abbildung \ref{img:V2} dargestellt.
+Für die Photodetektorschaltung wird der Rauschgenerator aus der Schaltung entfernt und durch eine LED mit Photodetektor ersetzt. Die LED wird an den linken Ausgang des Funktionengenerators angeschlossen und der Photodetektor wird mit dem Vorverstärker verbunden. Die LED und der Photodetektor stehen sich auf einem Stab gegenüber. Der Abstand zwischen den beiden Bauteilen kann variiert werden und wird mit einer auf dem Stab angebrachten Millimeterskala gemessen. Der Aufbau wird schematisch in Abbildung \ref{img:V2} dargestellt.
 \begin{figure}[H]
 	\centering
 	\includegraphics[height=4.2cm]{picture/Photodetektorschaltung.png}
