--- a/07-01.Dezember/content/theorie.tex
+++ b/07-01.Dezember/content/theorie.tex
@@ -7,19 +7,19 @@ Bei dem Lock-In-Verstärker handelt es sich um einen Verstärker mit einem einge
 	\caption{Schematischer Aufbau eines Lock-In-Verstärkers. \cite[1]{sample}}
   \label{img:sLIV}
 \end{figure}
-Das Nutzsignal $U_\text{sig}$ wird mit einem Bandpassfilter von Rauschanteilen höherer ($\omega \gg \omega_\text{0}$) und niedrigerer ($\omega \ll \omega_\text{0}$) Frequenzen gereinigt. Danach wird das Signal in dem Mischer mit einem Referenzsignal $U_\text{ref}$, welches die gleiche Frequenz wie $U_\text{sig}$ besitzt, multipliziert. Das Referenzsignal kann relativ zu dem Nutzsignal Phasenverschoben werden und so mit dem Signal synchronisiert werden ($\Delta \Phi = 0$). Der nachfolgende Tiefpaß ($\tau = RC \gg 1/ \omega_\text{0}$) integriert das Mischsignal $U_\text{sig} \times U_\text{ref}$
-über mehrere Perioden der Frequenz $\omega_\text{0}$. Dadurch wird eine großer Teil der Rauschbeiträge, welche nicht mit der Frequenz des Nutzsignals synchronisiert sind, herausgemittelt. Durch dieses Verfahren wird am Ausgang eine zur Eingangsspannung $U_\text{sig}$ proportionale Gleichspannung $U_\text{out} \propto U_\text{0} \cdot \cos \Phi$ gemessen. Außerdem definiert dieser Tiefpass auch die Bandbreite des Restrauschens, wenn die Zeitkonstante $\tau = RC$ sehr groß gewählt wird, wird die Bandbreite $\Delta \nu = 1/(\pi RC)$ belibieg klein. So wird mit dem Lock-In-Verstärker ein Güte von $Q = 100000$ erreicht, währenddessen kann ein Bandpass nur Güten von $Q = 1000$ erreichen.
+Das Nutzsignal $U_\text{sig}$ wird mit einem Bandpassfilter von Rauschanteilen höherer ($\omega \gg \omega_\text{0}$) und niedrigerer ($\omega \ll \omega_\text{0}$) Frequenzen gereinigt. Danach wird das Signal in dem Mischer mit einem Referenzsignal $U_\text{ref}$, welches die gleiche Frequenz wie $U_\text{sig}$ besitzt, multipliziert. Das Referenzsignal kann relativ zu dem Nutzsignal, phasenverschoben, und so mit dem Signal synchronisiert werden ($\Delta \Phi = 0$). Der nachfolgende Tiefpaß ($\tau = RC \gg 1/ \omega_\text{0}$) integriert das Mischsignal $U_\text{sig} \times U_\text{ref}$
+über mehrere Perioden der Frequenz $\omega_\text{0}$. Dadurch wird eine großer Teil der Rauschbeiträge, welche nicht mit der Frequenz des Nutzsignals synchronisiert sind, herausgemittelt. Durch dieses Verfahren wird am Ausgang eine zur Eingangsspannung $U_\text{sig}$ proportionale Gleichspannung $U_\text{out} \propto U_\text{0} \cdot \cos \Phi$ gemessen. Außerdem definiert dieser Tiefpass auch die Bandbreite des Restrauschens, wenn die Zeitkonstante $\tau = RC$ sehr groß gewählt wird, wird die Bandbreite $\Delta \nu = 1/(\pi RC)$ beliebig klein. So wird mit dem Lock-In-Verstärker ein Güte von $Q = 100000$ erreicht, während ein Bandpass nur Güten von $Q = 1000$ erreichen kann.
 \begin{figure}[H]
 	\centering
 	\includegraphics[height=8cm]{picture/SV.png}
 	\caption{Signalverläufe. \cite[2]{sample}}
   \label{img:SV}
 \end{figure}
-In Abblidung \ref{img:SV} wird eine sinusförmige Signalspannung
+In Abbildung \ref{img:SV} wird eine sinusförmige Signalspannung
 \begin{align}
 	U_\text{sig} = U_\text{0} \sin(\omega t) \ ,
 \end{align}
-betrachtet, die durch $U_\text{ref}$ moduliert wird. $U_\text{ref}$ hat dabei eine auf 1 normierte Amplitude, die bei einer positiven Signalspannung auf 1 steht und bei einer negativen Signalspannung auf -1 steht. Dadurch wird das Nutzsignal von einer Wechselspannung zu einer Gleichspannung geändert, um bei der Integration ein Ergebniss ungleich 0 zu erhalten.
+betrachtet, die durch $U_\text{ref}$ moduliert wird. $U_\text{ref}$ hat dabei eine auf 1 normierte Amplitude, die bei einer positiven Signalspannung auf 1 steht und bei einer negativen Signalspannung auf -1 steht. Dadurch wird das Nutzsignal von einer Wechselspannung zu einer Gleichspannung geändert, um bei der Integration ein Ergebnis ungleich 0 zu erhalten.
 Die Rechteckspannung $U_\text{ref}$ wird mit einer Fourrierreihe genähert, die sich aus den ungeraden Harmonischen der Grundfrequnz $\omega$ zusammensetzt und die Form
 \begin{equation}
 	U_\text{ref} = \frac{4}{\pi} \left( \sin(\omega t) + \frac{1}{3} \sin(3 \omega t) + \frac{1}{5} \sin(5 \omega t) + ... \right)
